WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56686
Crash when sending a sync message ends up invalidating the connection
https://bugs.webkit.org/show_bug.cgi?id=56686
Summary
Crash when sending a sync message ends up invalidating the connection
Anders Carlsson
Reported
2011-03-18 14:51:01 PDT
Crash when sending a sync message ends up invalidating the connection
Attachments
Patch
(1.16 KB, patch)
2011-03-18 15:01 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-18 15:01:34 PDT
Created
attachment 86219
[details]
Patch
Anders Carlsson
Comment 2
2011-03-18 15:32:31 PDT
Committed
r81519
: <
http://trac.webkit.org/changeset/81519
>
Alexey Proskuryakov
Comment 3
2011-03-18 17:22:26 PDT
I think that it was a mistake to make didFailToSendSyncMessage a client call.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug