2011-03-18  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Crash when sending a sync message ends up invalidating the connection
        https://bugs.webkit.org/show_bug.cgi?id=56686
        <rdar://problem/9048781>

        Guard against a null client.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::sendSyncMessage):


Canonical link: https://commits.webkit.org/71373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81519 268f45cc-cd09-0410-ab3c-d52691b4dbfc